API seed BD, pujar i descarregar arxius (fotos de perfil)
